--- a/index.html
+++ b/index.html
@@ -1,20 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Los Hermanos | Dashboard</title>
 
     <link rel="stylesheet" href="index.css">
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gray-200 h-screen">
-    <header class="w-full bg-blue-500 h-28 flex items-center justify-center text-white">
-        <h1 class="text-3xl font-bold">Dashboard de Infraestrutura Escolar Publica no Brasil  </h1>
+    <header class="w-full bg-white h-28 flex items-center justify-between text-white px-4">
+        <img src="LosHernanos.png" class="col-span-1">
+        <h1 class="text-3xl font-bold text-black col-span-2 flex-1 text-center">Dashboard de Infraestrutura Escolar Publica no Brasil  </h1>
     </header>
 
     <main class="grid grid-cols-[200px_1fr] h-full">
         <aside class="bg-blue-700 h-full">
+            <!--Menu Lateral-->
             <form action="" class="flex flex-col items-center justify-center w-full p-8 gap-8">
                 <select name="" id="" class="w-full p-2 rounded-lg text-lg">
                     <option value="Sul">Sul</option>
@@ -37,19 +39,47 @@
         </aside>
 
         <section class="grid grid-cols-1 lg:grid-cols-3 p-8 gap-4">
+            <!--Grafico de Barras-->
             <div class="h-96 bg-white rounded-lg box-shadow-md lg:col-span-2">
                 <canvas id="barChart"></canvas>
             </div>
 
+            <!--Grafico de Rosca-->
             <div class="h-96 bg-white rounded-lg box-shadow-md lg:col-span-1">
                 <canvas id="pieChart"></canvas>
             </div>
 
+            <!--Grafico de Linhas-->
             <div class="h-96 bg-white rounded-lg box-shadow-md lg:col-span-3">
                 <canvas id="lineChart"></canvas>
             </div>
         </section>
+
+
+
+
+
+
+
+
+        
     </main>
+
+
+
+
+    <footer style="background-color: #142941; padding: 20px; text-align: center;">
+
+        <h3 style="color: white; font-size: 28px;">È nois na fita</h3>
+    </footer>
+
+
+
+
+
+
+
+
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="index.js"></script>
